Fix page header margin-bottom spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1156,7 +1156,7 @@ h4 {
     }
 
     .page-header {
-        /*margin-bottom: var(--space-8);*/
+        margin-bottom: 0;
     }
 
     .room-options {
@@ -1217,7 +1217,7 @@ h4 {
     }
 
     .page-header {
-        /*margin-bottom: var(--space-3);*/
+        margin-bottom: 0;
     }
 
     .page-icon {
